force-app/main/default/objects/Case/fields/Codify_Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Codify_Resolution_Summary__c</fullName>
    <label>Codify Resolution Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >How the Case was actually fixed, in the technician's words, cleaned up. Internal record-keeping, so Codify writes this directly without a confirmation gate.</description>
</CustomField>