force-app/main/default/objects/Case/fields/Codify_Resolved_Via_Codify__c.field-meta.xml
<CustomField>
    <fullName>Codify_Resolved_Via_Codify__c</fullName>
    <label>Resolved via Codify</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >Marks Cases whose resolution was captured through Codify, so service ops can measure adoption against Cases closed the old way.</description>
</CustomField>