force-app/main/default/objects/Case/fields/Codify_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Codify_Root_Cause__c</fullName>
    <label>Codify Root Cause</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The taxonomy label Codify classified this fix as. Blank means Codify was not confident enough to tag, which is a deliberate outcome, not a failure.</description>
</CustomField>