force-app/main/default/objects/Case/fields/Codify_Root_Cause_Key__c.field-meta.xml
<CustomField>
    <fullName>Codify_Root_Cause_Key__c</fullName>
    <label>Codify Root Cause Key</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Stable taxonomy key behind the label. This is what the Related Case Sweep queries on.</description>
</CustomField>