force-app/main/default/objects/Case/fields/Codify_Source_Resolution_Log__c.field-meta.xml
<CustomField>
    <fullName>Codify_Source_Resolution_Log__c</fullName>
    <label>Codify Source Resolution Log</label>
    <type>Lookup</type>
    <referenceTo>Codify_Resolution_Log__c</referenceTo>
    <relationshipName>Resolved_Cases</relationshipName>
    <relationshipLabel>Cases Resolved</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The recap that produced this Case's resolution fields.</description>
</CustomField>