force-app/main/default/objects/Case/fields/Codify_Suggested_Fix__c.field-meta.xml
<CustomField>
    <fullName>Codify_Suggested_Fix__c</fullName>
    <label>Codify Suggested Fix</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Set by the Related Case Sweep on OTHER open Cases sharing this root cause. A suggestion for whoever owns that Case, never an applied resolution.</description>
</CustomField>