force-app/main/default/objects/Case/fields/Codify_Suggested_Fix_Source__c.field-meta.xml
<CustomField>
    <fullName>Codify_Suggested_Fix_Source__c</fullName>
    <label>Codify Suggested Fix Source</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Which Case the suggested fix came from, so the owner can see the diagnosis it is based on.</description>
</CustomField>