force-app/main/default/objects/Case/listViews/Resolved_via_Codify.listView-meta.xml
<ListView>
    <fullName>Resolved_via_Codify</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Codify_Root_Cause__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CLOSED</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codify_Resolved_Via_Codify__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Resolved via Codify</label>
</ListView>